feat: add get film method
