# src/routes/user.js
@@ -1,17 +1,23 @@
 import express from "express";
 import multer from "multer";
 import { loginUser, signupUser } from "../controllers/userController.js";
-import { filmFunction } from "../controllers/filmController.js";
+import { filmFunction, getFilm } from "../controllers/filmController.js";
 
 const router = express.Router();
 
 router.post("/user/login", loginUser);
 
-router.post("/user/signup", signupUser);
-
 const fileStorage = multer.diskStorage({
   destination: (req, file, cb) => {
     cb(null, "public/storage");
+  },
+  filename: (req, file, cb) => {
+    cb(null, file.originalname);
+  },
+});
+const fileStorageAvatar = multer.diskStorage({
+  destination: (req, file, cb) => {
+    cb(null, "public/avatar");
   },
   filename: (req, file, cb) => {
     cb(null, file.originalname);
@@ -31,9 +37,18 @@ const fileFilter = (req, file, cb) => {
 };
 
 router.post(
+  "/user/signup",
+  multer({ storage: fileStorageAvatar, fileFilter: fileFilter }).single(
+    "avatar"
+  ),
+  signupUser
+);
+router.post(
   "/films",
   multer({ storage: fileStorage, fileFilter: fileFilter }).single("avatar"),
   filmFunction
 );
+
+router.get("/film", getFilm);
 
 export default router;
